--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,59 @@ h1 {
 .card-work p:first-of-type {
     height: 90px;
 }
+.card-more {
+/*
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 95%;
+    height: 200px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    position: relative;
+*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 800px;
+    height: 200px;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.card-more:hover {
+    transform: scale(0.9);
+    transition: 0.3s;
+}
+.card-more img {
+    width: 100%;
+    height: 100%;
+    
+}
+.card-more .corner{
+    position: absolute;
+    top: 0px;
+    right: -8%;
+    font-size: 15px;
+    width: 200px;
+    background-color: var(--primaryOne);
+    transform: rotate(40deg);
+    padding-left: 40px;
+    color: var(--primaryTwo);
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
+}
+.card-more .corner-not{
+    position: absolute;
+    top: 0px;
+    right: -8%;
+    font-size: 12px;
+    width: 200px;
+    background-color: var(--secondarythree);
+    transform: rotate(40deg);
+    padding-left: 40px;
+    color: var(--primaryFour);
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
+}
 /*end projects*/
 .cv {
     position: absolute;
