--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ h1 {
     position: relative;
 */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 800px;
+    max-width: 98%;
     height: 200px;
     text-align: center;
     margin-bottom: 20px;
@@ -449,6 +449,9 @@ h1 {
 }
 /* Some media queries for responsiveness */
 @media screen and (max-width: 600px) {
+    .navbar {
+        width: 100%; 
+    }
     .m {
         margin-left: 0%;
     }
