--- a/css/style.css
+++ b/css/style.css
@@ -390,15 +390,6 @@ h1 {
     height: 90px;
 }
 .card-more {
-/*
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 95%;
-    height: 200px;
-    margin-bottom: 20px;
-    overflow: hidden;
-    position: relative;
-*/
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 98%;
     height: 200px;
@@ -443,10 +434,83 @@ h1 {
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
 }
 /*end projects*/
+/*start cv*/
 .cv {
+    margin-left: 570px; /* Same as the width of the sidenav */
+    font-size: 20px; /* Increased text to enable scrolling */
     position: absolute;
-    margin-left: 470px; /* Same as the width of the sidenav */
+    padding: 0px 20px;
+    top: 5%;
 }
+.cv .card-cv {
+    max-width: 800px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.cv h2 {
+    font-weight: bold;
+    font-size: 23px;
+}
+.cv h3 {
+    font-weight: bold;
+    font-size: 18px;
+}
+.cv h4 {
+    color: var(--secondaryOne);
+    font-size: 15px;
+    font-weight: bolder;
+    margin-bottom: 2px;
+}
+.cv h5 {
+    color: var(--secondaryOne);
+    font-size: 15px;
+}
+.cv i {
+    font-size: 17px;
+    margin-bottom: 8px;
+}
+.cv span {
+    font-size: 16px;
+    color: var(--secondaryOne);
+}
+.cv .list li {
+    font-size: 15px;
+    margin-bottom: 6px;
+    list-style-type: none;
+    color: var(--secondaryOne);
+}
+.cv .list li::before {
+  content: "\002D";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
+}
+.card-cv .progress {
+    height: 18px;
+    border-radius: 9px;
+}
+.progress-bar {
+    background-color: var(--primaryOne);
+}
+.card-cv .progress .bar-p {
+    color: var(--primaryTwo);
+    text-align: center;
+}
+.card-cv .list-st li{
+    display: inline-block;
+    background-color: var(--primaryOne);
+    border-radius: 3px;
+    color: var(--primaryTwo);
+    padding: 5px 10px;
+    line-height: 1.2;
+    margin: 3px 2px;
+    font-size: 15px;
+}
+/*end cv*/
+
 /* Some media queries for responsiveness */
 @media screen and (max-width: 600px) {
     .navbar {
@@ -491,6 +555,10 @@ h1 {
     .contact .card {
         margin-bottom: 20px;
         width: 95%;
+    }
+    .cv {
+        margin-left: 0%;
+        top: 10%;
     }
 }
 @media screen and (min-width: 600px) {
